layout issue

--- a/profileCard.css
+++ b/profileCard.css
@@ -50,7 +50,14 @@ body{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;}
 
 .profileCard-top{
+    width: inherit;
     height: 140px;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+}
+
+.profileCard-top-img{
+    width: inherit;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
 }
